--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="./Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Fitness website Strengthy Gym" />
+    <meta name="description" content="Fitness website Fit with Me Gym" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Strengthy</title>
+    <title>Fit with Me</title>
   </head>
   <body>
     <div id="root"></div>
